--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,13 +31,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
-        run: npm ci
+        run: npx lerna bootstrap
       - name: Build
         run: npm run build
       - name: Test
         run: npm run test
-#      - name: Version up
-#        run: npx lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr${PR} --yes
+      - name: Version up
+        run: npx lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr${PR} --yes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
