--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "ng-core",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "prepare": "husky install",
+    "bp": "lerna bootstrap",
+    "build": "lerna run build",
+    "test": "lerna run test",
+    "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
+    "release": "run-s build release-versionup release-publish",
+    "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
+    "release-publish": "lerna publish from-package --no-commit-hooks --no-verify-access --yes"
+  },
+  "workspaces": [
+    "./projects/*"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rbkmoney/ng-core"
   },
   "private": true,
   "dependencies": {
@@ -28,12 +38,18 @@
     "@angular/compiler-cli": "~11.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^6.0.0",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "lerna": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "shx": "^0.3.3",
     "ng-packagr": "^12.0.0",
     "typescript": "^4.1.5"
   }
