--- a/projects/id-generator/package.json
+++ b/projects/id-generator/package.json
@@ -1,6 +1,13 @@
 {
   "name": "@rbkmoney/id-generator",
   "version": "0.0.1",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
+  },
   "peerDependencies": {
     "@angular/common": "^12.0.2",
     "@angular/core": "^12.0.2"
