--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
     "useWorkspaces": true,
-    "packages": ["packages/*"],
+    "packages": ["projects/*"],
     "version": "independent",
     "command": {
         "publish": {
