--- a/projects/id-generator/package.json
+++ b/projects/id-generator/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@rbkmoney/id-generator",
   "version": "0.0.1",
+  "description": "ID Generator",
+  "author": "rbkmoney",
+  "main": "lib/public-api",
+  "types": "lib/public-api",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "npm run clean & tsc -p tsconfig.json",
+    "clean": "shx rm -rf lib",
+    "test": "ts-node ../../node_modules/jasmine/bin/jasmine src/**/*.spec.ts --reporter=jasmine-console-reporter"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rbkmoney/ng-core"
   },
   "peerDependencies": {
     "@angular/common": "^12.0.2",
