--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
       - uses: jwalton/gh-find-current-pr@v1
         id: pr
-      - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+      - run: { git fetch --depth=1 origin +refs/tags/*:refs/tags/* && echo "Success" } || { echo "Error" }
       - name: Setup Node ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
