--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,12 @@ jobs:
           fetch-depth: 0
       - uses: jwalton/gh-find-current-pr@v1
         id: pr
-      - run: { git fetch --depth=1 origin +refs/tags/*:refs/tags/* && echo "Success" } || { echo "Error" }
+      - name: Fetch with tags
+        run: |
+          if git fetch --depth=1 origin +refs/tags/*:refs/tags/*; then
+            echo "Success"
+          else
+            echo "Error"
       - name: Setup Node ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
