--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,21 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitReturns": true,
+    "sourceMap": true,
+    "declaration": false,
     "paths": {
-      "@my-org/id-generator/*": [
-        "projects/id-generator/*",
-        "projects/id-generator"
-      ],
-      "@my-org/id-generator": [
-        "dist/id-generator/*",
+      "id-generator": [
+        "dist/id-generator/id-generator",
         "dist/id-generator"
       ]
     },
-    "noFallthroughCasesInSwitch": true,
-    "sourceMap": true,
-    "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "es2015",
     "module": "es2020",
     "lib": [
       "es2018",
@@ -32,9 +23,6 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "enableI18nLegacyMessageIdFormat": false
   }
 }
