--- a/angular.json
+++ b/angular.json
@@ -7,22 +7,19 @@
       "projectType": "library",
       "root": "projects/id-generator",
       "sourceRoot": "projects/id-generator/src",
-      "prefix": "rbkmoney",
+      "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
+            "tsConfig": "projects/id-generator/tsconfig.lib.json",
             "project": "projects/id-generator/ng-package.json"
           },
           "configurations": {
             "production": {
               "tsConfig": "projects/id-generator/tsconfig.lib.prod.json"
-            },
-            "development": {
-              "tsConfig": "projects/id-generator/tsconfig.lib.json"
             }
-          },
-          "defaultConfiguration": "production"
+          }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -30,6 +27,18 @@
             "main": "projects/id-generator/src/test.ts",
             "tsConfig": "projects/id-generator/tsconfig.spec.json",
             "karmaConfig": "projects/id-generator/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/id-generator/tsconfig.lib.json",
+              "projects/id-generator/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
