--- a/package.json
+++ b/package.json
@@ -3,54 +3,51 @@
   "version": "0.0.0",
   "scripts": {
     "prepare": "husky install",
-    "bp": "lerna bootstrap",
-    "build": "lerna run build",
-    "test": "lerna run test",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s build release-versionup release-publish",
     "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
     "release-publish": "lerna publish from-package --no-commit-hooks --no-verify-access --yes"
   },
-  "workspaces": [
-    "./projects/*"
-  ],
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/rbkmoney/ng-core"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.9",
-    "@angular/common": "~11.2.9",
-    "@angular/compiler": "~11.2.9",
-    "@angular/core": "~11.2.9",
-    "@angular/forms": "~11.2.9",
-    "@angular/platform-browser": "~11.2.9",
-    "@angular/platform-browser-dynamic": "~11.2.9",
-    "@angular/router": "~11.2.9",
+    "@angular/animations": "~11.2.14",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/forms": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.9",
-    "@angular/compiler-cli": "~11.2.9",
+    "@angular/cli": "~11.2.13",
+    "@angular/compiler-cli": "~11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "husky": "^6.0.0",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "~1.5.0",
     "lerna": "^4.0.0",
-    "npm-run-all": "^4.1.5",
-    "shx": "^0.3.3",
-    "ng-packagr": "^12.0.0",
-    "typescript": "^4.1.5"
+    "ng-packagr": "^11.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.5"
   }
 }
