fix: fix test???

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "prepare": "husky install",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --browsers=ChromeHeadless --watch=false",
     "lint": "ng lint",
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s build release-versionup release-publish",
@@ -40,9 +40,9 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "husky": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "husky": "^6.0.0",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
