--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-jasmine-html-reporter": "~1.5.0",
     "lerna": "^4.0.0",
     "ng-packagr": "^11.0.0",
+    "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
