--- a/projects/id-generator/package.json
+++ b/projects/id-generator/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@rbkmoney/id-generator",
-  "version": "0.1.1",
+  "version": "0.1.2-pr5.0",
+  "description": "ID generator",
+  "author": "rbkmoney",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "ng build",
     "postpublish": "rm -rf dist/"
