fix: fix publish content

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s build release-versionup release-publish",
     "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
-    "release-publish": "lerna publish from-package --no-commit-hooks --no-verify-access --yes"
+    "release-publish": "lerna publish --contents dist from-package --no-commit-hooks --no-verify-access --yes"
   },
   "private": true,
   "repository": {
