--- a/projects/id-generator/package.json
+++ b/projects/id-generator/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@rbkmoney/id-generator",
-  "version": "0.1.2",
+  "version": "0.1.3-pr6.1",
   "description": "ID generator",
   "author": "rbkmoney",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "ng build",
     "postpublish": "rm -rf dist/"
