prettier/lint fix

--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
     "prepare": "husky install",
     "build": "ng build",
     "test": "ng test --browsers=ChromeHeadless --watch=false",
-    "lint": "ng lint",
+    "fix": "npm run lint-fix && npm run prettier-fix",
+    "parallel-cmd": "concurrently --prefix-colors magenta,green",
+    "lint-cmd": "eslint \"projects/*/src/**/*.{ts,js,html}\" --max-warnings 1932 --cache",
+    "lint": "npm run lint-cmd",
+    "lint-fix": "npm run lint-cmd -- --fix",
+    "lint-errors": "npm run lint-cmd -- --quiet",
+    "prettier-cmd": "prettier \"**/*.{html,js,ts,css,scss,md,json,prettierrc,svg}\"",
+    "prettier": "npm run prettier-cmd -- --check",
+    "prettier-fix": "npm run prettier-cmd -- --write",
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s release-versionup build release-publish",
     "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
-    "release-publish": "lerna publish --contents dist from-package --no-commit-hooks --no-verify-access --yes"
+    "release-publish": "lerna publish --contents dist from-package --no-commit-hooks --no-verify-access --yes",
+    "ci:check": "npm run parallel-cmd -- --names PRET,LINT \"npm run prettier\" \"npm run lint-cmd -- --quiet\""
   },
   "private": true,
   "repository": {
@@ -35,11 +44,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
+    "@angular-eslint/eslint-plugin": "^12.3.1",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.4",
+    "@rbkmoney/eslint-plugin": "^0.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "concurrently": "^6.2.0",
     "husky": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -51,6 +63,7 @@
     "lerna": "^4.0.0",
     "ng-packagr": "^12.1.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.3.5"
