--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
         run: npx lerna bootstrap
+      - name: Check
+        run: npm run ci:check
       - name: Build
         run: npm run build
       - name: Test
