--- a/lerna.json
+++ b/lerna.json
@@ -1,16 +1,14 @@
 {
-  "useWorkspaces": true,
-  "packages": [
-    "projects/*"
-  ],
-  "version": "independent",
-  "command": {
-    "publish": {
-      "conventionalCommits": true
+    "useWorkspaces": true,
+    "packages": ["projects/*"],
+    "version": "independent",
+    "command": {
+        "publish": {
+            "conventionalCommits": true
+        }
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://npm.pkg.github.com/"
     }
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com/"
-  }
 }
