--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-          scope: @rbkmoney
+          scope: '@rbkmoney'
       - name: Git Identity
         run: |
           git config --global user.name 'github-actions[bot]'
