--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
     "prepare": "husky install",
     "build": "ng build",
     "test": "ng test --browsers=ChromeHeadless --watch=false",
-    "fix": "npm run lint-fix && npm run prettier-fix",
+    "fix": "npm run prettier-fix",
     "parallel-cmd": "concurrently --prefix-colors magenta,green",
-    "lint-cmd": "eslint \"projects/*/src/**/*.{ts,js,html}\" --max-warnings 1932 --cache",
-    "lint": "npm run lint-cmd",
-    "lint-fix": "npm run lint-cmd -- --fix",
-    "lint-errors": "npm run lint-cmd -- --quiet",
     "prettier-cmd": "prettier \"**/*.{html,js,ts,css,scss,md,json,prettierrc,svg}\"",
     "prettier": "npm run prettier-cmd -- --check",
     "prettier-fix": "npm run prettier-cmd -- --write",
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s release-versionup build release-publish",
     "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
-    "release-publish": "lerna publish --contents dist from-package --no-commit-hooks --no-verify-access --yes",
-    "ci:check": "npm run parallel-cmd -- --names PRET,LINT \"npm run prettier\" \"npm run lint-cmd -- --quiet\""
+    "release-publish": "lerna publish --contents dist from-package --no-commit-hooks --no-verify-access --yes"
   },
   "private": true,
   "repository": {
@@ -47,7 +42,6 @@
     "@angular-eslint/eslint-plugin": "^12.3.1",
     "@angular/cli": "~12.1.4",
     "@angular/compiler-cli": "~12.1.4",
-    "@rbkmoney/eslint-plugin": "^0.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
