--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: jwalton/gh-find-current-pr@v1
+      - name: Get current PR
+        uses: jwalton/gh-find-current-pr@v1
         id: pr
       - name: Fetch with tags
         run: |
@@ -27,7 +28,7 @@ jobs:
       - name: Setup Node ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 15
+          node-version: 16
           registry-url: https://npm.pkg.github.com/
       - name: Git Identity
         run: |
@@ -38,6 +39,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install
         run: npx lerna bootstrap
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Check
+        run: npm run prettier
       - name: Build
         run: npm run build
       - name: Test
