--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "prepare": "husky install",
     "build": "ng build",
     "test": "ng test --browsers=ChromeHeadless --watch=false",
-    "lint": "ng lint",
+    "fix": "npm run prettier-fix",
+    "parallel-cmd": "concurrently --prefix-colors magenta,green",
+    "prettier-cmd": "prettier \"**/*.{html,js,ts,css,scss,md,json,prettierrc,svg}\"",
+    "prettier": "npm run prettier-cmd -- --check",
+    "prettier-fix": "npm run prettier-cmd -- --write",
     "versionup": "lerna version --no-commit-hooks --conventional-prerelease --no-changelog --preid pr --yes",
     "release": "run-s release-versionup build release-publish",
     "release-versionup": "lerna version --no-commit-hooks --conventional-graduate --yes",
@@ -20,40 +24,42 @@
     "projects/*"
   ],
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/animations": "~12.1.4",
+    "@angular/common": "~12.1.4",
+    "@angular/compiler": "~12.1.4",
+    "@angular/core": "~12.1.4",
+    "@angular/forms": "~12.1.4",
+    "@angular/platform-browser": "~12.1.4",
+    "@angular/platform-browser-dynamic": "~12.1.4",
+    "@angular/router": "~12.1.4",
     "puppeteer": "^10.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.13",
-    "@angular/compiler-cli": "~11.2.14",
+    "@angular-devkit/build-angular": "~12.1.4",
+    "@angular-eslint/eslint-plugin": "^12.3.1",
+    "@angular/cli": "~12.1.4",
+    "@angular/compiler-cli": "~12.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "concurrently": "^6.2.0",
     "husky": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
     "lerna": "^4.0.0",
-    "ng-packagr": "^11.0.0",
+    "ng-packagr": "^12.1.2",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   }
 }
