--- a/projects/id-generator/package.json
+++ b/projects/id-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbkmoney/id-generator",
-  "version": "0.1.3",
+  "version": "0.2.0-pr7.0",
   "description": "ID generator",
   "author": "rbkmoney",
   "scripts": {
@@ -15,11 +15,11 @@
     "registry": "https://npm.pkg.github.com/@rbkmoney"
   },
   "peerDependencies": {
-    "@angular/common": "^11.2.14",
-    "@angular/core": "^11.2.14"
+    "@angular/common": "^12.1.0",
+    "@angular/core": "^12.1.0"
   },
   "dependencies": {
     "short-uuid": "^4.2.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.2.0"
   }
 }
