--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /bazel-out
 
 # dependencies
-/node_modules
+**/node_modules
 
 # profiling files
 chrome-profiler-events*.json
@@ -47,3 +47,6 @@ Thumbs.db
 
 # ESLint
 .eslintcache
+
+# Projects
+**/dist
