--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,37 @@
                     }
                 }
             }
+        },
+        "sentry": {
+            "projectType": "library",
+            "root": "projects/sentry",
+            "sourceRoot": "projects/sentry/src",
+            "prefix": "lib",
+            "architect": {
+                "build": {
+                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "options": {
+                        "project": "projects/sentry/ng-package.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "tsConfig": "projects/sentry/tsconfig.lib.prod.json"
+                        },
+                        "development": {
+                            "tsConfig": "projects/sentry/tsconfig.lib.json"
+                        }
+                    },
+                    "defaultConfiguration": "production"
+                },
+                "test": {
+                    "builder": "@angular-devkit/build-angular:karma",
+                    "options": {
+                        "main": "projects/sentry/src/test.ts",
+                        "tsConfig": "projects/sentry/tsconfig.spec.json",
+                        "karmaConfig": "projects/sentry/karma.conf.js"
+                    }
+                }
+            }
         }
     },
     "defaultProject": "id-generator"
