--- a/projects/sentry/package.json
+++ b/projects/sentry/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "@rbkmoney/id-generator",
-  "version": "0.2.1-pr9.0",
-  "description": "ID generator",
-  "author": "rbkmoney",
+  "name": "@rbkmoney/sentry",
+  "version": "0.0.1-pr9.0",
   "scripts": {
     "build": "ng build",
     "postpublish": "rm -rf dist/"
@@ -19,7 +17,9 @@
     "@angular/core": "^12.1.0"
   },
   "dependencies": {
-    "short-uuid": "^4.2.0",
+    "@sentry/angular": "^6.12.0",
+    "@sentry/integrations": "^6.12.0",
+    "@sentry/tracing": "^6.12.0",
     "tslib": "^2.2.0"
   }
 }
